--- a/templates/base.html
+++ b/templates/base.html
@@ -2,142 +2,164 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Learning Log | {% block title %}{% endblock title %}</title>
-  <link rel="shortcut icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}"/>
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-  <!-- CSS -->
-  <link rel="stylesheet" href="{% static 'css/base.css' %}">
-</head>
-<body>
-   <header>
-   <!-- Fixed navbar -->
-   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-   <a class="navbar-brand" href="{% url 'topics' %}">Learning Log</a>
-   {% if user.is_authenticated %}
-     <ul class="navbar-nav mr-auto">
-       <li class="nav-item">
-         <a href="{% url 'new_topic' %}">Add a new topic</a>
-       </li>
-     </ul>
-   {% endif %}
-   <button class="navbar-toggler" type="button" data-toggle="collapse"
-   data-target="#navbarSupportedContent"
-   aria-controls="navbarSupportedContent" aria-expanded="false"
-   aria-label="Toggle navigation">
-     <span class="navbar-toggler-icon"></span>
-   </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      {% if user.is_authenticated %}
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link dropdown-toggle" href="#"
-            id="navbarDropdown" role="button" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false">
-              {{ user.username }}
-            </a>
-            <div class="dropdown-menu dropdown-menu-right"
-            aria-labelledby="navbarDropdown">
-              <a class="dropdown-item"
-              href="{% url 'user_detail' user.username %}">My Profile</a>
-              <a class="dropdown-item"
-              href="{% url 'account_set_password' %}">Change password</a>
-              <a class="dropdown-item"
-              href="{% url 'account_reset_password' %}">Forgot password?</a>
-              <a class="dropdown-item"
-              href="{% url 'account_email' %}">Change email</a>
-              <a class="dropdown-item" href="{% url 'account_logout' %}"> Log Out</a>
-              <a class="dropdown-item" href="{% url 'about' %}">About</a>
-            </div>
-          </li>
-        </ul>
-      {% else %}
-        <form class="form-inline ml-auto">
-          <a href="{% url 'account_login' %}" class="btn btn-outline-secondary">
-          Log In</a>
-          <a href="{% url 'account_signup' %}" class="btn btn-primary ml-2">
-         Sign up</a>
-          <a href="{% url 'about' %}" class="btn btn-outline-secondary ml-2">
-          About</a>
-        </form>
-      {% endif %}
-    </div>
-    </nav>
-  </header>
-  <main role="main" class="container">
-    <div class="pb-2 mb-2">
-      {% block page_header %}{% endblock page_header %}
-    </div>
-    <div class="container">
-      {% if messages %}
-        {% for message in messages %}
-            <div class="alert {% if message.tags %}alert-{{ message.tags }}{% endif %}">{{ message }}<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button></div>
-        {% endfor %}
-      {% endif %}
-      {% block content %}
-      {% endblock content %}
-      <!-- Pagination -->
-      {% block pagination %}
-        {% if is_paginated %}
-          <div class="pagination">
-            <span class="page-links">
-              {% if page_obj.has_previous %}
-                <a class="btn btn-info" href="{{ request.path }}?page={{ page_obj.previous_page_number }}">&laquo; previous</a>
-              {% endif %}
-              <span class="page-current">
-                Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
-              </span>
-              {% if page_obj.has_next %}
-                <a class="btn btn-info" href="{{ request.path }}?page={{ page_obj.next_page_number }}">next &raquo;</a>
-              {% endif %}
-            </span>
-          </div>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="keywords" content="Django, learning-log" />
+    <meta name="description"
+          content="A Django web application for tracking learning" />
+    <title>Learning Log |
+      {% block title %}
+      {% endblock title %}
+    </title>
+    <link rel="shortcut icon"
+          type="image/x-icon"
+          href="{% static 'images/favicon.ico' %}" />
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet"
+          href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+          integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
+          crossorigin="anonymous">
+    <!-- CSS -->
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
+  </head>
+  <body>
+    <header>
+      <!-- Fixed navbar -->
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="{% url 'topics' %}">Learning Log</a>
+        {% if user.is_authenticated %}
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+              <a href="{% url 'new_topic' %}">Add a new topic</a>
+            </li>
+          </ul>
         {% endif %}
-      {% endblock pagination %}
-    </div>
-    <!-- Bootstrap JavaScript -->
-        <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
-    <!-- JavaScript -->
-    <script src = "{% static 'js/base.js' %}"></script>
-  </main>
+        <button class="navbar-toggler"
+                type="button"
+                data-toggle="collapse"
+                data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent"
+                aria-expanded="false"
+                aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          {% if user.is_authenticated %}
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                <a class="nav-link dropdown-toggle"
+                   href="#"
+                   id="navbarDropdown"
+                   role="button"
+                   data-toggle="dropdown"
+                   aria-haspopup="true"
+                   aria-expanded="false">{{ user.username }}</a>
+                <div class="dropdown-menu dropdown-menu-right"
+                     aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" href="{% url 'user_detail' user.username %}">My Profile</a>
+                  <a class="dropdown-item" href="{% url 'account_set_password' %}">Change password</a>
+                  <a class="dropdown-item" href="{% url 'account_reset_password' %}">Forgot password?</a>
+                  <a class="dropdown-item" href="{% url 'account_email' %}">Change email</a>
+                  <a class="dropdown-item" href="{% url 'account_logout' %}">Log Out</a>
+                  <a class="dropdown-item" href="{% url 'about' %}">About</a>
+                </div>
+              </li>
+            </ul>
+          {% else %}
+            <form class="form-inline ml-auto">
+              <a href="{% url 'account_login' %}" class="btn btn-outline-secondary">Log In</a>
+              <a href="{% url 'account_signup' %}" class="btn btn-primary ml-2">Sign up</a>
+              <a href="{% url 'about' %}" class="btn btn-outline-secondary ml-2">About</a>
+            </form>
+          {% endif %}
+        </div>
+      </nav>
+    </header>
+    <main role="main" class="container">
+      <div class="pb-2 mb-2">
+        {% block page_header %}
+        {% endblock page_header %}
+      </div>
+      <div class="container">
+        {% if messages %}
+          {% for message in messages %}
+            <div class="alert {% if message.tags %}alert-{{ message.tags }}{% endif %}">
+              {{ message }}
+              <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">×</span>
+              </button>
+            </div>
+          {% endfor %}
+        {% endif %}
+        {% block content %}
+        {% endblock content %}
+        <!-- Pagination -->
+        {% block pagination %}
+          {% if is_paginated %}
+            <div class="pagination">
+              <span class="page-links">
+                {% if page_obj.has_previous %}
+                  <a class="btn btn-info"
+                     href="{{ request.path }}?page={{ page_obj.previous_page_number }}">« previous</a>
+                {% endif %}
+                <span class="page-current">Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}</span>
+                {% if page_obj.has_next %}
+                  <a class="btn btn-info"
+                     href="{{ request.path }}?page={{ page_obj.next_page_number }}">next »</a>
+                {% endif %}
+              </span>
+            </div>
+          {% endif %}
+        {% endblock pagination %}
+      </div>
+      <!-- Bootstrap JavaScript -->
+      <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+              integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+              crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+              integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+              crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
+              integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
+              crossorigin="anonymous"></script>
+      <!-- JavaScript -->
+      <script src = "{% static 'js/base.js' %}"></script>
+    </main>
     <!-- Begin footer -->
-  <div class="container">
-  <div class="content"></div>
-  <footer>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-bottom">
-    <div class="col-md-12 col-sm-12 col-sm-push-6">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item col-md-2">
-           <p style="color:white;font-size:60%"> &copy; 2023 learning-log&reg;</p>
-          </li>
-          <li class="nav-item col-md-2">
-          </li>
-          <li class="nav-item col-md-2">
-            <a class="btn btn-outline-light btn-sm mt-1"
-                href="https://github.com/kevinbowen777/learning-log" target="_blank">Source Code</a>
-          </li>
-          <li class="nav-item col-md-2">
-            <a class="btn btn-outline-light btn-sm mt-1"
-                href="https://github.com/kevinbowen777/learning-log/issues" target="_blank">Bug Reports</a>
-          </li>
-          <li class="nav-item col-md-2">
-            <a class="btn btn-outline-light btn-sm mt-1"
-                href="{% url "contact" %}">Contact Us</a>
-          </li>
-          <li class="nav-item col-md-2">
-            <a class="btn btn-outline-light btn-sm mt-1" href="{% url "about" %}">About Us</a>
-          </li>
-        </ul>
+    <div class="container">
+      <div class="content"></div>
+      <footer>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-bottom">
+          <div class="col-md-12 col-sm-12 col-sm-push-6">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item col-md-2">
+                <p class="copyright">© 2023 learning-log®</p>
+              </li>
+              <li class="nav-item col-md-2"></li>
+              <li class="nav-item col-md-2">
+                <a class="btn btn-outline-light btn-sm mt-1"
+                   href="https://github.com/kevinbowen777/learning-log"
+                   target="_blank">Source Code</a>
+              </li>
+              <li class="nav-item col-md-2">
+                <a class="btn btn-outline-light btn-sm mt-1"
+                   href="https://github.com/kevinbowen777/learning-log/issues"
+                   target="_blank">Bug Reports</a>
+              </li>
+              <li class="nav-item col-md-2">
+                <a class="btn btn-outline-light btn-sm mt-1" href="{% url "contact" %}">Contact Us</a>
+              </li>
+              <li class="nav-item col-md-2">
+                <a class="btn btn-outline-light btn-sm mt-1" href="{% url "about" %}">About Us</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </footer>
     </div>
-  </nav>
-  </footer>
-  </div>
-  <!-- End footer -->
-</body>
+    <!-- End footer -->
+  </body>
 
 </html>
