--- a/templates/learning_logs/edit_entry.html
+++ b/templates/learning_logs/edit_entry.html
@@ -1,21 +1,25 @@
 {% extends "account/base.html" %}
 {% load crispy_forms_tags %}
 
-{% block title %}{{ topic }} - {{ entry }}{% endblock title %}
+{% block title %}
+  {{ topic }} - {{ entry }}
+{% endblock title %}
 
 {% block inner %}
-<div class="container">
-  <p>
-  <h2>Edit entry</h2>
-  <p><a href="{% url 'topic' topic.id %}">{{ topic }}</a></p>
-  <form action="{% url 'edit_entry' entry.id %}" method='post'>
-    {% csrf_token %}
-    {% bootstrap_form form %}
-    {% buttons %}
-    <button name="submit" class="btn btn-primary">Save changes</button>
-    <a class="btn btn-info" href="#" onclick="window.history.back()">Cancel</a>
-    {% endbuttons %}
-  </form>
+  <div class="container">
+    <p>
+      <h2>Edit entry</h2>
+      <p>
+        <a href="{% url 'topic' topic.id %}">{{ topic }}</a>
+      </p>
+      <form action="{% url 'edit_entry' entry.id %}" method='post'>
+        {% csrf_token %}
+        {% bootstrap_form form %}
+        {% buttons %}
+        <button name="submit" class="btn btn-primary">Save changes</button>
+        <a class="btn btn-info" href="#" onclick="window.history.back()">Cancel</a>
+      {% endbuttons %}
+    </form>
   </p>
 </div>
 {% endblock inner %}
