--- a/templates/learning_logs/new_entry.html
+++ b/templates/learning_logs/new_entry.html
@@ -1,19 +1,23 @@
 {% extends "account/base.html" %}
 {% load crispy_forms_tags %}
 
-{% block title %}{{ topic }} - Add a new entry {% endblock title %}
+{% block title %}
+  {{ topic }} - Add a new entry
+{% endblock title %}
 
 {% block inner %}
-<div class="container">
-  <p>
-  <h2>Add a new Entry</h2>
-  <p><a href="{% url 'topic' topic.id %}">{{ topic }}</a></p>
-  <form action="{% url 'new_entry' topic.id %}" method='post'>
-    {% csrf_token %}
-    {{ form.as_p }}
-      <button name="submit" class="btn btn-primary">Add entry</button>
-      <a class="btn btn-info" href="#" onclick="window.history.back()">Cancel</a>
-  </form>
-  </p>
-</div>
+  <div class="container">
+    <p>
+      <h2>Add a new Entry</h2>
+      <p>
+        <a href="{% url 'topic' topic.id %}">{{ topic }}</a>
+      </p>
+      <form action="{% url 'new_entry' topic.id %}" method='post'>
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button name="submit" class="btn btn-primary">Add entry</button>
+        <a class="btn btn-info" href="#" onclick="window.history.back()">Cancel</a>
+      </form>
+    </p>
+  </div>
 {% endblock inner %}
