--- a/templates/learning_logs/new_topic.html
+++ b/templates/learning_logs/new_topic.html
@@ -1,18 +1,20 @@
 {% extends "account/base.html" %}
 {% load crispy_forms_tags %}
 
-{% block title %}Add a new topic{% endblock title %}
+{% block title %}
+  Add a new topic
+{% endblock title %}
 
 {% block inner %}
-<div class="container">
-  <p>
-  <h2>Add a new topic</h2>
-  <form action="{% url 'new_topic' %}" method='post'>
-    {% csrf_token %}
-    {{ form.as_p }}
-          <button name="submit" class="btn btn-primary">Add topic</button>
-          <a class="btn btn-info" href="#" onclick="window.history.back()">Cancel</a>
-  </form>
-  </p>
-</div>
+  <div class="container">
+    <p>
+      <h2>Add a new topic</h2>
+      <form action="{% url 'new_topic' %}" method='post'>
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button name="submit" class="btn btn-primary">Add topic</button>
+        <a class="btn btn-info" href="#" onclick="window.history.back()">Cancel</a>
+      </form>
+    </p>
+  </div>
 {% endblock inner %}
