--- a/templates/learning_logs/topic.html
+++ b/templates/learning_logs/topic.html
@@ -1,49 +1,63 @@
 {% extends "account/base.html" %}
 {% load crispy_forms_tags %}
 
-{% block title %}Learning Topic - {{ topic }}{% endblock title %}
+{% block title %}
+  Learning Topic - {{ topic }}
+{% endblock title %}
 
 {% block inner %}
-<div class="container">
-  <p>
-  <h2>{{ topic }}</h2>
-  </p>
-  {% for entry in entries %}
-    <div class="card mb-3">
-      <h4 class="card-header">
-        <small>{{ entry.date_added|date:'M d, Y H:i' }}
-        <a href="{% url 'edit_entry' entry.id %}">
-            edit entry</a></small>
-      </h4>
-      <div class="card-body">
-        {{ entry.text|linebreaksbr }}
-      </div>
-    </div>
-  {% empty %}
-      <p>There are no entries for this topic yet.</p>
-  {% endfor %}
-  </ul>
+  <div class="container">
+    <p>
+      <h2>{{ topic }}</h2>
+    </p>
+    <ul>
+      {% for entry in entries %}
+        <div class="card mb-3">
+          <h4 class="card-header">
+            <small>{{ entry.date_added|date:'M d, Y H:i' }}
+              <a href="{% url 'edit_entry' entry.id %}">edit entry</a></small>
+          </h4>
+          <div class="card-body">{{ entry.text|linebreaksbr }}</div>
+        </div>
+      {% empty %}
+        <p>There are no entries for this topic yet.</p>
+      {% endfor %}
+    </ul>
     {% if entries.has_other_pages %}
-  <ul class="pagination">
-    {% if entries.has_previous %}
-      <li><a class="btn btn-info btn-sm mr-2" href="?page={{ topics.previous_page_number }}">&laquo; Previous</a></li>
-    {% else %}
-      <li class="btn btn-info disabled btn-sm mr-2"><span>&laquo; Previous</span></li>
+      <ul class="pagination">
+        {% if entries.has_previous %}
+          <li>
+            <a class="btn btn-info btn-sm mr-2"
+               href="?page={{ topics.previous_page_number }}">« Previous</a>
+          </li>
+        {% else %}
+          <li class="btn btn-info disabled btn-sm mr-2">
+            <span>« Previous</span>
+          </li>
+        {% endif %}
+        {% for i in entries.paginator.page_range %}
+          {% if entries.number == i %}
+            <li class="btn btn-info active btn-sm mr-1">
+              <span> {{ i }} <span class="sr-only">(current)</span></span>
+            </li>
+          {% else %}
+            <li>
+              <a class="btn btn-info btn-sm mr-1" href="?page={{ i }}">{{ i }}</a>
+            </li>
+          {% endif %}
+        {% endfor %}
+        {% if entries.has_next %}
+          <li>
+            <a class="btn btn-info btn-sm ml-2"
+               href="?page={{ topics.next_page_number }}">Next »</a>
+          </li>
+        {% else %}
+          <li class="btn btn-info disabled ml-2">
+            <span>Next »</span>
+          </li>
+        {% endif %}
+      </ul>
     {% endif %}
-    {% for i in entries.paginator.page_range %}
-      {% if entries.number == i %}
-        <li class="btn btn-info active btn-sm mr-1"><span> {{ i }} <span class="sr-only">(current)</span></span></li>
-      {% else %}
-        <li><a class="btn btn-info btn-sm mr-1" href="?page={{ i }}">{{ i }}</a></li>
-      {% endif %}
-    {% endfor %}
-    {% if entries.has_next %}
-      <li><a class="btn btn-info btn-sm ml-2" href="?page={{ topics.next_page_number }}">Next &raquo;</a></li>
-    {% else %}
-      <li class="btn btn-info disabled ml-2"><span>Next &raquo;</span></li>
-    {% endif %}
-  </ul>
-  {% endif %}
     <a class="btn btn-primary" href="{% url 'new_entry' topic.id %}">Add new entry</a>
-</div>
+  </div>
 {% endblock inner %}
