--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -1,25 +1,31 @@
 {% extends "account/base.html" %}
 
-{% block title %}About{% endblock title %}
+{% block title %}
+  About
+{% endblock title %}
 
 {% block inner %}
-<div class="container">
-  <p>
-    <h2>About page</h2>
-      <p>This is the about page where we explain why we do what we do. It's not
-terribly important but it still needs to be included.
+  <div class="container">
+    <p>
+      <h2>About page</h2>
+      <p>
+        This is the about page where we explain why we do what we do. It's not
+        terribly important but it still needs to be included.
       </p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-<p>Nibh praesent tristique magna sit amet purus gravida quis. Suspendisse
-ultrices gravida dictum fusce ut. Porta nibh venenatis cras sed felis eget
-velit aliquet sagittis. Felis eget nunc lobortis mattis aliquam faucibus purus
-in massa.
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </p>
-  </p>
-</div>
+      <p>
+        Nibh praesent tristique magna sit amet purus gravida quis. Suspendisse
+        ultrices gravida dictum fusce ut. Porta nibh venenatis cras sed felis eget
+        velit aliquet sagittis. Felis eget nunc lobortis mattis aliquam faucibus purus
+        in massa.
+      </p>
+    </p>
+  </div>
 {% endblock inner %}
