--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8" />
     <meta name="viewport"
           content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="keywords" content="Django, learning-log" />
@@ -32,7 +32,7 @@
         {% if user.is_authenticated %}
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a href="{% url 'new_topic' %}">Add a new topic</a>
+              <a class="btn btn-outline-light text-light" href="{% url 'new_topic' %}">Add a new topic</a>
             </li>
           </ul>
         {% endif %}
@@ -49,14 +49,14 @@
           {% if user.is_authenticated %}
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
-                <a class="nav-link dropdown-toggle"
+                <a class="btn btn-outline-light dropdown-toggle"
                    href="#"
                    id="navbarDropdown"
                    role="button"
                    data-toggle="dropdown"
                    aria-haspopup="true"
                    aria-expanded="false">{{ user.username }}</a>
-                <div class="dropdown-menu dropdown-menu-right"
+                <div class="dropdown-menu dropdown-menu-lg-right"
                      aria-labelledby="navbarDropdown">
                   <a class="dropdown-item" href="{% url 'user_detail' user.username %}">My Profile</a>
                   <a class="dropdown-item" href="{% url 'account_set_password' %}">Change password</a>
@@ -124,7 +124,7 @@
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
               integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
               crossorigin="anonymous"></script>
-      <!-- JavaScript -->
+      <!-- Local JavaScript -->
       <script src = "{% static 'js/base.js' %}"></script>
     </main>
     <!-- Begin footer -->
@@ -161,5 +161,4 @@
     </div>
     <!-- End footer -->
   </body>
-
 </html>
